@@ -28,6 +28,9 @@ New features added
 Release 0.5.1 (in development)
 ==============================
 
+* Fix the handling of ``:param:`` and ``:type:`` doc fields when
+  they contain markup (especially cross-referencing roles).
+
 * #65: Fix storage of depth information for PNGs generated by the
   pngmath extension.
 
